<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Save Our Pets</string>
    <string name="btnPrueba">1 English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="iniciarSesion">Log In</string>
    <string name="btnLogin">Log In</string>
    <string name="btnFacebook">Continue with Facebook</string>
    <string name="textUser">User</string>
    <string name="textPass">Password</string>
    <string name="swipeReporte">Swipe left to send report</string>
    <string name="registrar">Register</string>
    <string name="report_indication">Fill in the information so we can find the pet</string>
    <string name="btnEnviar">Send</string>
    <string name="swipeLogin">Swipe right to login</string>
    <string name="reporte">Report</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textBienvenida">Welcome</string>
    <string name="menu_species">Species</string>
    <string name="menu_razas">Races</string>
    <string name="menu_vacunas">Vaccines</string>
    <string name="menu_cerrar_sesion">Log Out</string>
    <string name="menu_perfil">My profile</string>
    <string name="menu_adoptar">Adopt a pet</string>
    <string name="menu_reportar">Pet report</string>

    <string name="facebook_app_id">188034237374789</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">d7ad8c02a02193568042d9170ff538ef</string>
    <string name="btn_actualizar">Update</string>
    <string name="btn_eliminar">Delete</string>
    <string name="btn_agregar">Save</string>
    <string name="btn_volver">Back</string>
    <string name="btn_registro">Sign Up</string>
    <string name="btn_reporte">Pet report</string>
    <string name="btn_editar_perfil">Update profile info</string>
    <string name="txt_nombre">Name</string>
    <string name="txt_agregar_especie">Add species</string>
    <string name="txt_actualizar_especie">Update specie</string>
    <string name="txt_actualizar_vacuna">Update vaccine</string>
    <string name="txt_actualizar_raza">Update race</string>
    <string name="txt_agregar_vacuna">Add vaccine</string>
    <string name="txt_vacuna">Vaccine</string>
    <string name="txt_descripcion">Description</string>
    <string name="txt_volver">Back</string>

    <string name="info_especie">Specie successfully added </string>
    <string name="info_actualizar_especie">Specie successfully updated </string>
    <string name="info_eliminar_especie">Specie successfully eliminated</string>
    <string name="info_vacuna">Vaccine successfully added</string>
    <string name="info_actualizar_vacuna">Vaccine successfully updated </string>
    <string name="info_eliminar_vacuna">Vaccine successfully eliminated</string>

    <string name="txt_agregar_raza">Add race</string>
    <string name="txt_raza">Race</string>
    <string name="txt_especie">Specie</string>
    <string name="info_raza">Race successfully added</string>
    <string name="info_actualizar_raza">Race successfully updated </string>
    <string name="info_eliminar_raza">Race successfully eliminated</string>
    <string name="error_eliminar_raza">An error occurred when try to delete the race</string>
    <string name="error_actualizar_raza">An error occurred when try to update the race</string>
    <string name="error_raza">Enter the race\'s name</string>

    <!-- Strings para la gestión de usuarios -->
    <string name="txt_titulo_registro">User Register</string>
    <string name="txt_user_nombres">Name</string>
    <string name="txt_user_apellidos">Lastname</string>
    <string name="txt_user_tel">Telephone</string>
    <string name="txt_dui">DUI</string>
    <string name="txt_email">Email</string>
    <string name="txt_fecha_nacimiento">Birthdate</string>
    <string name="txt_direccion">Address</string>
    <string name="txt_password">Password</string>
    <string name="txt_info_registro_user">Sign up completed</string>
    <string name="txt_error_registro_user">Error in sign up</string>
    <string name="txt_info_actualizar_user">Information updated</string>
    <string name="txt_error_actualizar_user">An error occurred when try to update your information</string>
    <string name="error_user_nombres">Please enter your name</string>
    <string name="error_user_apellidos">Please enter your lastname</string>
    <string name="error_user_tel">Enter your telephone</string>
    <string name="error_user_tel_2">Please enter a valid phone number. Contains 8 digits and must start with numbers: 2,6 or 7</string>
    <string name="error_dui">Enter your DUI</string>
    <string name="error_email">Enter your email address</string>
    <string name="error_fecha_nacimiento">Enter your birthdate</string>
    <string name="error_fecha_nacimiento_2">Enter a valid date</string>
    <string name="error_direccion">Enter your address</string>
    <string name="error_password">Specify a password</string>

    <!-- Menú de usuarios -->
    <string name="btn_ir">Go</string>
    <string name="txt_reportar">Pet report</string>
    <string name="txt_adoptar">Adopt a pet</string>
    <string name="txt_perfil">My profile</string>

    <!-- Strings para inicio de sesión -->
    <string name="login_correcto">Welcome</string>
    <string name="login_error_password">Enter your password</string>
    <string name="login_error_email">Enter a valid email address</string>
    <string name="error_login_1">Error login. Please verify your password</string>
    <string name="error_login_2">Your email address doesn\'t exist in our records</string>
    <string name="error_login_3">An unexpected error occurred while logging in</string>

    <!-- Strings para reportes -->
    <string name="reporte_titulo">Pet report</string>
    <string name="reporte_descripcion">Description</string>
    <string name="reporte_direccion">Address</string>
    <string name="reporte_foto">Take a photo</string>
    <string name="reporte_latitud">Latitude</string>
    <string name="reporte_longitud">Longitude</string>
    <string name="reporte_usuario">Reported by</string>
    <string name="btn_reportar">Report</string>
    <string name="reporte_ok">Your report has been sent successfully</string>
    <string name="reporte_error">An error occurred while sending the report</string>
    <string name="reporte_descripcion_error">Enter a physical description of the animal</string>
    <string name="reporte_direccion_error">Enter the address where the animal is located</string>
    <string name="btn_mis_reportes">My reports</string>
    <string name="btn_adoptar">Adopt</string>

    <string name="error_registros">Error getting the records</string>
    <string name="error_nombre_especie">Enter the specie\'s name</string>
    <string name="error_especie">An error occurred when try to save the specie</string>
    <string name="error_actualizar_especie">An error occurred when try to update the specie</string>
    <string name="error_eliminar_especie">An error occurred when try to delete the specie</string>
    <string name="error_vacuna">An error occurred when try to save the vaccine</string>
    <string name="error_actualizar_vacuna">An error occurred when try to update the vaccine</string>
    <string name="error_eliminar_vacuna">An error occurred when try to delete the vaccine</string>
    <string name="error_nombre_vacuna">Enter vaccine\'s name</string>
    <string name="error_des_vacuna">Enter vaccine\'s description</string>
    <string name="txt_cancelado">Canceled</string>
    <string name="txt_si">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_confirmacion">Confirmation</string>
    <string name="pregunta_eliminar">Are you sure do you want to delete this register ?</string>

    <!-- Mascotas -->
    <string name="btn_show">View</string>
</resources>