<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".usuarios.particular.ActualizarPerfilActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_editar_perfil"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textAlignment="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_user_nombres"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_user_apellidos"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_user_tel"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_dui"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_dui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_email"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_direccion"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_actualizar"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red_Default"
            android:text="@string/btn_actualizar" />
        <Button
            android:id="@+id/btn_volver"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:text="@string/btn_volver" />
    </RelativeLayout>
</LinearLayout>