<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".reportes.CrearReporteActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte_titulo"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textAlignment="center" />
    <Button
        android:id="@+id/btn_mis_reportes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/red_Default"
        android:text="@string/btn_mis_reportes" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/txt_especie"
        android:textSize="18dp" />
    <Spinner
        android:id="@+id/spinnerIDEspecie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:background="@color/red_Default"
        android:backgroundTint="@color/red_Default"
        android:dropDownWidth="match_parent"
        android:popupBackground="@color/red_Default" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte_descripcion"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte_direccion"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/edt_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_reportar"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red_Default"
            android:text="@string/btn_reportar" />
        <Button
            android:id="@+id/btn_volver"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:text="@string/btn_volver" />
    </RelativeLayout>
</LinearLayout>